--- a/android/app/src/main/assets/capacitor.config.json
+++ b/android/app/src/main/assets/capacitor.config.json
@@ -1,6 +1,6 @@
 {
-  "appId": "com.imedicalapps.burnsfluid",
-  "appName": "Burns Fluid",
+  "appId": "com.imedicalapps.burnsfluidcalculator",
+  "appName": "Burns Fluid Calculator",
   "bundledWebRuntime": false,
   "npmClient": "npm",
   "webDir": "www",
